--- a/projects.html
+++ b/projects.html
@@ -10,30 +10,30 @@
     <!-- imports header material-->
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <span class="navbar-brand mb-0 h1" href="#">Gerson Cheon Kroiz</span>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="{% url "home"%}">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url "research"%}">Research</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href={% url "projects"%}>Projects</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href={% url "hobbies"%}>Hobbies</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href={% url "cv"%}>CV</a>      
-          </li>
-        </ul>
-      </div>
-    </nav>
+        <span class="navbar-brand mb-0 h1" href="#">Gerson Cheon Kroiz</span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="research.html">Research</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="projects.html">Projects <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="hobbies.html">Hobbies</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="cv.html">CV</a>      
+            </li>
+          </ul>
+        </div>
+      </nav>
     
     <div class="jumbotron">
       <h1 class="display-4">Deep Learning for Proton Radiotherapy</h1>
