Doneish the research portion

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 ---
-
 ---
 <!DOCTYPE html>
 <html>
@@ -44,12 +43,12 @@
   <head>
   <style> 
   body {
-    {% comment %} background-image: url("static/images/IMG_6053.jpeg"); {% endcomment %}
-    background-color: #cccccc;
+    background-color: #303030;
   }
   </style>
   </head>
   
+  <div class="container">
   ​<picture>
     {% comment %} <source srcset="static/images/GK_Headshot.jpg" type="image/svg+xml"> {% endcomment %}
   <img src="static/images/GK_Headshot.jpg" class="rounded-circle mx-auto d-block" alt="..." height = '300px'>
@@ -67,6 +66,7 @@
       </p>
     </div>
   </div>
+</div>
   
   {% comment %} {% include footer.html %} {% endcomment %}
 
