--- a/research_projects/cybertraining.html
+++ b/research_projects/cybertraining.html
@@ -27,6 +27,7 @@
     </style>
     
     <!-- imports header material-->
+    <div style="background-image: url('../static/images/banner.jpeg'); background-size: cover; background-repeat: no-repeat; min-height: 100vh;">
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <span class="navbar-brand mb-1 h1" href="#">Gerson Cheon Kroiz</span>
@@ -54,8 +55,7 @@
       </div>
     </nav>
 
-<div style="background-image: url('../static/images/banner.jpeg'); background-size: cover; background-repeat: no-repeat;">
-</br>
+    </br>
 </br>
 
 <div class="container">
@@ -103,9 +103,6 @@
       </div>
     </div>
 </div>
-</br>
-</br>
-</br>
 </br>
 </br>
 </br>
