--- a/research_projects/suli.html
+++ b/research_projects/suli.html
@@ -28,6 +28,7 @@ div.d {
 </style>
 
 <!-- imports header material-->
+<div style="background-image: url('../static/images/banner.jpeg'); background-size: cover; background-repeat: no-repeat; min-height: 100vh;">
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <span class="navbar-brand mb-1 h1" href="#">Gerson Cheon Kroiz</span>
@@ -55,7 +56,6 @@ div.d {
   </div>
 </nav>
 
-<div style="background-image: url('../static/images/banner.jpeg'); background-size: cover; background-repeat: no-repeat;">
 </br>
 </br>
 
@@ -107,7 +107,6 @@ div.d {
 </br>
 </br>
 </br>
-</div>
 {% include footer.html %}
 </div>
 </html>
