--- a/research_projects/suli.html
+++ b/research_projects/suli.html
@@ -83,14 +83,24 @@ div.d {
 </br>
 </br>
   <h4><b> Internal Poster Presentation</b></h4>
-
-    <embed src="../static/pdfs/SULI_Poster.pdf" width="800px" height="665x" />
+  <div class="d-none d-lg-block">
+    <iframe src="https://drive.google.com/file/d/1PVXdYPVXjlS4zx_2RLozFUIt-2SmFhTe/preview" width="800px" height="600px"></iframe>
+  </div>
+  <div class="d-block d-lg-none">
+    <iframe src="https://drive.google.com/file/d/1PVXdYPVXjlS4zx_2RLozFUIt-2SmFhTe/preview" width="400px" height="300px"></iframe>
+  </div>
+    {% comment %} <embed src="../static/pdfs/SULI_Poster.pdf" width="800px" height="665x" /> {% endcomment %}
 </br>
 </br>
 </br>
-
     <h4><b> Internal Final Report </b></h4>
-    <embed src="../static/pdfs/SULI_Report.pdf" width="800px" height="1100px" />
+    {% comment %} <embed src="../static/pdfs/SULI_Report.pdf" width="800px" height="1100px" /> {% endcomment %}
+    <div class="d-none d-lg-block">
+      <iframe src="https://drive.google.com/file/d/1az9-fotpHPalhql8dbH7IgJABTertYmT/preview" width="800px" height="1025px"></iframe>
+    </div>
+    <div class="d-block d-lg-none">
+      <iframe src="https://drive.google.com/file/d/1az9-fotpHPalhql8dbH7IgJABTertYmT/preview" width="400px" height="500px"></iframe>
+    </div>
 
     <br>
 
