--- a/cv.html
+++ b/cv.html
@@ -43,8 +43,8 @@
   <div class="center">
     <div style="display:table; margin-left:auto; margin-right:auto;"> 
 
-  {% comment %} <embed src="../static/pdfs/Gerson_Kroiz_CV.pdf" type="application/pdf" width="1000px" height="1100px" /> {% endcomment %}
-  <embed src="../static/pdfs/Gerson_Kroiz_CV.pdf" type="application/pdf" width="850vh" height="1100vh"/>
+  {% comment %} <embed src="../static/pdfs/Gerson_Kroiz_CV.pdf" type="application/pdf" width="850vh" height="1100vh"/> {% endcomment %}
+    <iframe src="https://drive.google.com/file/d/19skuq5lZex57wZdAet4kInUS1WzMTJMe/preview" width="800px" height="1025px"></iframe>
     </div>
   </div>
 </br>
