--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 ---
+active: index
 ---
 <!DOCTYPE html>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <html>
 <head>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -9,39 +13,24 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
   
-  <!-- imports header material-->
-  
-
+<!-- imports header material-->
   
   <div style="background-image: url('static/images/banner.jpeg'); background-size: cover; background-repeat: no-repeat; min-height: 100vh">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <span class="navbar-brand mb-1 h1" href="#">Gerson Cheon Kroiz</span>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="research.html">Research</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="projects.html">Selected Projects</a>
-          </li>
-          {% comment %} <li class="nav-item"> {% endcomment %}
-            {% comment %} <a class="nav-link" href="hobbies.html">Hobbies</a> {% endcomment %}
-          {% comment %} </li> {% endcomment %}
-          <li class="nav-item">
-            <a class="nav-link" href="cv.html">CV</a>      
-          </li>
-        </ul>
-      </div>
-    </nav>
+    {% include navbar.html %}
+
   <div class="container">
   ​<picture>
-  <img src="static/images/GK_Headshot.jpg" class="rounded-circle mx-auto d-block" alt="..." height = '500px'>
+    {% comment %} <img src="static/images/GK_Headshot.jpg" class="rounded-circle mx-auto d-block img-fluid"  alt="..." height = "50vh;" alt="Responsive image"> {% endcomment %}
+    {% comment %} <img src="static/images/GK_Headshot.jpg" class="rounded-circle mx-auto d-block img-fluid" alt="..." style="max-width: 50vw;"> {% endcomment %}
+  <div class="d-none d-lg-block">
+    <img src="static/images/GK_Headshot.jpg" class="rounded-circle mx-auto d-block img-fluid" alt="..." style="max-width: 25vw;">
+  </div>
+  <div class="d-none d-md-block d-lg-none">
+    <img src="static/images/GK_Headshot.jpg" class="rounded-circle mx-auto d-block img-fluid" alt="..." style="max-width: 35vw;">
+  </div>
+  <div class="d-md-none">
+    <img src="static/images/GK_Headshot.jpg" class="rounded-circle mx-auto d-block img-fluid" alt="..." style="max-width: 50vw;">
+  </div>
   </picture>
   <br>
   <div class="jumbotron">
