--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,7 @@
 ---
+active: projects
 ---
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,37 +11,13 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
-    <!-- imports header material-->
-    
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <span class="navbar-brand mb-1 h1" href="#">Gerson Cheon Kroiz</span>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="research.html">Research</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="projects.html">Selected Projects <span class="sr-only">(current)</span></a>
-            </li>
-            {% comment %} <li class="nav-item"> {% endcomment %}
-              {% comment %} <a class="nav-link" href="hobbies.html">Hobbies</a> {% endcomment %}
-            {% comment %} </li> {% endcomment %}
-            <li class="nav-item">
-              <a class="nav-link" href="cv.html">CV</a>      
-            </li>
-          </ul>
-        </div>
-      </nav>
 
+<!-- imports header material-->
 
 <div style="background-image: url('static/images/banner.jpeg'); background-size: cover; background-repeat: no-repeat; min-height: 100vh">
-  </br>
+  {% include navbar.html %}
+ 
+</br>
   </br>
 
   <div class="container fluid">
@@ -56,13 +34,7 @@
             </br>
             </div>
             <div class="col-sm">
-              {% comment %} <img src="../static/images/website_ss.png" style="object-fit:contain;" width="600px" height="300px"/> {% endcomment %}
-              <div class="d-none d-md-block">
-                <img src="../static/images/website_ss.png" style="object-fit:contain;" width="600px" height="300px"/>
-              </div>
-              <div class="d-block d-md-none">
-                <img src="../static/images/website_ss.png" style="object-fit:contain;" width="400px" height="270px"/>
-              </div>
+              <img src="../static/images/website_ss.png" style="object-fit:contain;" width="100%"/>
             </div>
           </div>
         </div>
@@ -82,12 +54,7 @@
           </br>
           </div>
           <div class="col-sm">
-            <div class="d-none d-md-block">
-              <iframe width="600px" height="400px" src="https://www.youtube.com/embed/4--0K2Lj3Uc"> </iframe>
-            </div>
-            <div class="d-block d-md-none">
-              <iframe width="400px" height="270px" src="https://www.youtube.com/embed/4--0K2Lj3Uc"> </iframe>
-            </div>
+              <iframe src="https://www.youtube.com/embed/4--0K2Lj3Uc" width="100%" style="aspect-ratio:1920/1200;"></iframe>
           </div>
         </div>
       </div>
@@ -108,14 +75,7 @@
           </br>
           </div>
           <div class="col-sm">
-            {% comment %} <embed src="../static/pdfs/smc_report.pdf" type="application/pdf" width="600px" height="400px" /> {% endcomment %}
-            {% comment %} <iframe src="https://drive.google.com/file/d/160B1NO5plpqIcyozjb38XQ4Iji_eYfnF/preview" width="600px" height="400px" allow="autoplay"></iframe> {% endcomment %}
-            <div class="d-none d-md-block">
-              <iframe src="https://drive.google.com/file/d/1qz9l4VUU_m-vKCz0O5mZBhdWVyI4Mt_5/preview" width="600px" height="400px"></iframe>
-            </div>
-            <div class="d-block d-md-none">
-              <iframe src="https://drive.google.com/file/d/1qz9l4VUU_m-vKCz0O5mZBhdWVyI4Mt_5/preview" width="400px" height="400px"></iframe>
-            </div>
+              <iframe src="https://drive.google.com/file/d/160B1NO5plpqIcyozjb38XQ4Iji_eYfnF/preview" width="100%" style="aspect-ratio:1/1.2941;"></iframe>
           </div>
         </div>
       </div>
