--- a/research_projects/nist.html
+++ b/research_projects/nist.html
@@ -1,4 +1,5 @@
 ---
+active: research
 ---
 <!DOCTYPE html>
 <html>
@@ -28,34 +29,10 @@
     </style>
     
     
-    <!-- imports header material-->
+<!-- imports header material-->
     <div style="background-image: url('../static/images/banner.jpeg'); background-size: cover; background-repeat: no-repeat; min-height: 100vh;">
+      {% include navbar.html %}
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <span class="navbar-brand mb-1 h1" href="#">Gerson Cheon Kroiz</span>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="../index.html">Home</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="../research.html">Research <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../projects.html">Selected Projects</a>
-          </li>
-          {% comment %} <li class="nav-item"> {% endcomment %}
-            {% comment %} <a class="nav-link" href="../hobbies.html">Hobbies</a> {% endcomment %}
-          {% comment %} </li> {% endcomment %}
-          <li class="nav-item">
-            <a class="nav-link" href="../cv.html">CV</a>      
-          </li>
-        </ul>
-      </div>
-    </nav>
 </br>
 </br>
 
@@ -82,6 +59,9 @@
         </p>
         <p>
           <b> Tools Used: </b> C++, Hedgehog, BLAS, Intel's MKL
+        </p>
+        <p>
+            <b> Github URL: </b> <a href="github.com/gkroiz/HMBLib">https://github.com/gkroiz/HMBLib</a>
         </p>
         <p>
           <b> Conference Proceedings: </b><a href="https://doi.org/10.1002/pamm.202000089">PAMM 2020</a>, <a href="10.1109/PAWATM51920.2020.00006">ICDATA 2021</a>
