--- a/research_projects/proton.html
+++ b/research_projects/proton.html
@@ -1,4 +1,5 @@
 ---
+active: research
 ---
 <!DOCTYPE html>
 <html>
@@ -27,34 +28,10 @@
     } 
     </style>
     
-    <!-- imports header material-->
-    <div style="background-image: url('../static/images/banner.jpeg'); background-size: cover; background-repeat: no-repeat; min-height: 100vh;">
-    
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <span class="navbar-brand mb-1 h1" href="#">Gerson Cheon Kroiz</span>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="../index.html">Home</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="../research.html">Research <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../projects.html">Selected Projects</a>
-          </li>
-          {% comment %} <li class="nav-item"> {% endcomment %}
-            {% comment %} <a class="nav-link" href="../hobbies.html">Hobbies</a> {% endcomment %}
-          {% comment %} </li> {% endcomment %}
-          <li class="nav-item">
-            <a class="nav-link" href="../cv.html">CV</a>      
-          </li>
-        </ul>
-      </div>
-    </nav>
+<!-- imports header material-->
+
+<div style="background-image: url('../static/images/banner.jpeg'); background-size: cover; background-repeat: no-repeat; min-height: 100vh;">
+  {% include navbar.html %}
 
     </br>
 </br>
@@ -77,7 +54,7 @@
         </p>
         <p>
           <b> Technical Report: </b> <a href="http://hpcf-files.umbc.edu/research/papers/BarajasKroiz_HPCF20211.pdf">2021 Technical Report</a>, <a href="https://userpages.umbc.edu/~gobbert/papers/BasalygaBarajas_Summer2020.pdf">Summer 2020 Technical Report</a>, <a href="https://userpages.umbc.edu/~gobbert/papers/CT2020Team4.pdf">Spring 2020 Report</a><br>
-          <b> Preprint: </b> <a href="https://www.researchsquare.com/article/rs-639221/v1">https://www.researchsquare.com/article/rs-639221/v1</a><br>
+          <b> Preprint: </b> <a href="https://www.researchsquare.com/article/rs-639221/v1">www.researchsquare.com/article/rs-639221/v1</a><br>
           <b> Conference Proceedings: </b><a href="https://doi.org/10.1002/pamm.202100236">PAMM 2021</a>, <a href="https://userpages.umbc.edu/~gobbert/papers/BarajasKroiz_CSCI2021.pdf">CSCI 2021</a>, <a href="https://userpages.umbc.edu/~gobbert/papers/Kroiz_ICDATA2021.pdf">ICDATA 2021</a>
         </p>
     </div>
