--- a/research_projects/suli.html
+++ b/research_projects/suli.html
@@ -1,4 +1,5 @@
 ---
+active: research
 ---
 <!DOCTYPE html>
 <html>
@@ -28,33 +29,9 @@ div.d {
 </style>
 
 <!-- imports header material-->
-<div style="background-image: url('../static/images/banner.jpeg'); background-size: cover; background-repeat: no-repeat; min-height: 100vh;">
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <span class="navbar-brand mb-1 h1" href="#">Gerson Cheon Kroiz</span>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="../index.html">Home</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="../research.html">Research <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../projects.html">Selected Projects</a>
-      </li>
-      {% comment %} <li class="nav-item"> {% endcomment %}
-        {% comment %} <a class="nav-link" href="../hobbies.html">Hobbies</a> {% endcomment %}
-      {% comment %} </li> {% endcomment %}
-      <li class="nav-item">
-        <a class="nav-link" href="../cv.html">CV</a>      
-      </li>
-    </ul>
-  </div>
-</nav>
+<div style="background-image: url('../static/images/banner.jpeg'); background-size: cover; background-repeat: no-repeat; min-height: 100vh;">
+  {% include navbar.html %}
 
 </br>
 </br>
@@ -76,32 +53,19 @@ div.d {
       <b> Tools Used: </b> Python, Git, LaTeX, Slurm, Harovod, Tensorflow
     </p>
     <p>
-      <b> Github URL: </b> <a href="https://github.com/gkroiz/weatherDNN">https://github.com/gkroiz/weatherDNN</a>
+      <b> Github URL: </b> <a href="https://github.com/gkroiz/weatherDNN">github.com/gkroiz/weatherDNN</a>
     </p>
   </div>
 
 </br>
 </br>
   <h4><b> Internal Poster Presentation</b></h4>
-  <div class="d-none d-lg-block">
-    <iframe src="https://drive.google.com/file/d/1PVXdYPVXjlS4zx_2RLozFUIt-2SmFhTe/preview" width="800px" height="600px"></iframe>
-  </div>
-  <div class="d-block d-lg-none">
-    <iframe src="https://drive.google.com/file/d/1PVXdYPVXjlS4zx_2RLozFUIt-2SmFhTe/preview" width="400px" height="300px"></iframe>
-  </div>
-    {% comment %} <embed src="../static/pdfs/SULI_Poster.pdf" width="800px" height="665x" /> {% endcomment %}
+    <iframe src="https://drive.google.com/file/d/1PVXdYPVXjlS4zx_2RLozFUIt-2SmFhTe/preview" width="100%" style="aspect-ratio:4/3;"></iframe>
 </br>
 </br>
 </br>
     <h4><b> Internal Final Report </b></h4>
-    {% comment %} <embed src="../static/pdfs/SULI_Report.pdf" width="800px" height="1100px" /> {% endcomment %}
-    <div class="d-none d-lg-block">
-      <iframe src="https://drive.google.com/file/d/1az9-fotpHPalhql8dbH7IgJABTertYmT/preview" width="800px" height="1025px"></iframe>
-    </div>
-    <div class="d-block d-lg-none">
-      <iframe src="https://drive.google.com/file/d/1az9-fotpHPalhql8dbH7IgJABTertYmT/preview" width="400px" height="500px"></iframe>
-    </div>
-
+      <iframe src="https://drive.google.com/file/d/1az9-fotpHPalhql8dbH7IgJABTertYmT/preview" width="100%" style="aspect-ratio:1/1.2941;"></iframe>
     <br>
 
 
