--- a/cv.html
+++ b/cv.html
@@ -19,13 +19,8 @@ active: cv
 </br>
 </br>
   
-  <div class="center">
-    <div style="display:table; margin-left:auto; margin-right:auto;"> 
 
-    {% comment %} <iframe src="https://drive.google.com/file/d/19skuq5lZex57wZdAet4kInUS1WzMTJMe/preview" width="800px" height="1025px"></iframe> {% endcomment %}
-    <iframe src="https://drive.google.com/file/d/19skuq5lZex57wZdAet4kInUS1WzMTJMe/preview" width="100%" style="aspect-ratio:1/1.2941;"></iframe>
-    </div>
-  </div>
+<p align="center">  <iframe src="https://drive.google.com/file/d/19skuq5lZex57wZdAet4kInUS1WzMTJMe/preview" width="75%" style="aspect-ratio:1/1.2941; max-height: 1200px"></iframe> </p>
 </br>
 </br>
 </br>
