--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@ title: Gerson C. Kroiz
     <div class="container">
       <h1 class="display-4">About Me</h1>
       <p class="lead">
-      Hi, I am Gerson Kroiz, a senior majoring in math and computer science at the University of Maryland, Baltimore County. 
-      My research interests include machine learning, high performance computing, and numerical linear algebra with applications in finance.
-      In my spare time, I enjoy traveling, playing piano, running, biking, skiing, and taking pictures.
+        Hi, I am Gerson Kroiz, and I recently graduated from the University of Maryland, Baltimore County with a double Bachelor's degree in Mathematics and Computer Science. 
+        I am currently seeking employment in software engineering and quantitative finance (open to opportunities) with the eventual aim of pursuing an advanced degree. 
+        My research interests include machine learning, high performance computing, and numerical linear algebra. 
+        In my spare time, I enjoy traveling, soccer, playing piano, running, biking, skiing, and taking pictures.
       
       </p>
     </div>
