--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,30 @@ active: projects
           <div class="row">
 
             <div class="col-sm">
+              <h1 class="display-5">Premarket Predictions Project</h1>
+              <p class="lead">March 2022-May 2022</p>
+              <p> I created a UI similar to financial websites such as yahoo.com that focuses on the premarket information to see if any trends could be found. 
+                Data was scraped from the internet and was stored into a locally hosted database. 
+                This project was part of my Database Management course (CMSC 461) and utilizes Django, Python, MySQL, HTML/CSS, and JS.</p>
+              <a class="btn btn-outline-dark" href="https://github.com/gkroiz/premarket-predictions" role="button">Source Code</a>
+            </br>
+            </br>
+            </div>
+            <div class="col-sm">
+              <img src="../static/images/premarket-project-ss.png" style="object-fit:contain; aspect-ratio:1/1.15;" width="100%"/>
+            </div>
+          </div>
+        </div>
+    </div>
+  </div>
+
+
+  <div class="container fluid">
+    <div class="jumbotron">
+        <div class="container fluid">
+          <div class="row">
+
+            <div class="col-sm">
               <h1 class="display-5">Personal Website</h1>
               <p class="lead">December 2021</p>
               <p> I created a basic personal website. The website was developed using HTML, CSS, Bootstrap, and Jekyll hosted via Github.</p>
@@ -48,7 +72,9 @@ active: projects
           <div class="col-sm">
             <h1 class="display-5">UMBC Syllabus Synthesizer</h1>
             <p class="lead">October 2021-December 2021</p>
-            <p> This is a syllabus builder web-based application aimed to universalize, simplify, and reduce any redundancies in the syllabus creation process. This project was part of my Software Engineering Course (CMSC 447) and developed by Gerson Kroiz, Sam Bailor, Koby Samuel, Eddie Nieberding, and Deep Mistry. This project used Django, Python, HTML, CSS, and Bootstrap.</p>
+            <p> This is a syllabus builder web-based application aimed to universalize, simplify, and reduce any redundancies in the syllabus creation process.
+              This project was part of my Software Engineering Course (CMSC 447) and developed by Gerson Kroiz, Sam Bailor, Koby Samuel, Eddie Nieberding, and Deep Mistry. 
+              This project used Django, Python, HTML, CSS, and Bootstrap.</p>
             <a class="btn btn-outline-dark" href="https://github.com/gkroiz/syllabus-project" role="button">Source Code</a>
           </br>
           </br>
@@ -69,7 +95,9 @@ active: projects
           <div class="col-sm">
             <h1 class="display-5">SMC Data Challenge</h1>
             <p class="lead">June 2021-August 2021</p>
-            <p>Sander Schulhoff, Joshua Anantharaj, Nickolas Drake, and I designed a U-Net deep learning architecture for the data challenge sponsored by General Motors. We declined to present at their conference due to poor results based on industry standard. However, the project was good deep learning practice. This project utilized Python, Pytorch, Slurm, and LaTeX. </p>
+            <p>Sander Schulhoff, Joshua Anantharaj, Nickolas Drake, and I designed a U-Net deep learning architecture for the data challenge sponsored by General Motors. 
+              We declined to present at their conference due to poor results based on industry standard. However, the project was good deep learning practice. 
+              This project utilized Python, Pytorch, Slurm, and LaTeX. </p>
             <a class="btn btn-outline-dark" href="https://github.com/trigaten/smc-data-challenge" role="button">Source Code</a>
           </br>
           </br>
