updated page titles

--- a/cv.html
+++ b/cv.html
@@ -1,4 +1,5 @@
 ---
+title: Gerson C. Kroiz
 active: cv
 ---
 <head>
@@ -12,6 +13,7 @@ active: cv
     
 
 <!-- imports header material-->
+{% include header.html %}
 
 <div style="background-image: url('static/images/banner.jpeg'); background-size: cover; background-repeat: no-repeat; min-height: 100vh;">
   {% include navbar.html %}
