--- a/research.html
+++ b/research.html
@@ -1,4 +1,5 @@
 ---
+title: Gerson C. Kroiz
 active: research
 ---
 <!DOCTYPE html>
@@ -11,6 +12,7 @@ active: research
 </head>
 
 <!-- imports header material-->
+{% include header.html %}
 
 <div style="background-image: url('static/images/banner.jpeg'); background-size: cover; background-repeat: no-repeat; min-height: 100vh">
 {% include navbar.html %}
