--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 ---
-active: index
 title: Gerson C. Kroiz
 ---
 <!DOCTYPE html>
@@ -15,7 +14,6 @@ title: Gerson C. Kroiz
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  {%- seo -%}
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
@@ -24,7 +22,8 @@ title: Gerson C. Kroiz
 </head>
   
 <!-- imports header material-->
-  
+  {% include header.html %}
+
   <div style="background-image: url('static/images/banner.jpeg'); background-size: cover; background-repeat: no-repeat; min-height: 100vh">
     {% include navbar.html %}
 
