--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,5 @@
 ---
+title: Gerson C. Kroiz
 active: projects
 ---
 
@@ -13,6 +14,7 @@ active: projects
 
 
 <!-- imports header material-->
+{% include header.html %}
 
 <div style="background-image: url('static/images/banner.jpeg'); background-size: cover; background-repeat: no-repeat; min-height: 100vh">
   {% include navbar.html %}
