--- a/index.html
+++ b/index.html
@@ -46,9 +46,18 @@ title: Gerson C. Kroiz
     <div class="container">
       <h1 class="display-4">About Me</h1>
       <p class="lead">
-        Hi, I am Gerson Kroiz, and I work at Google as an ML/AI software engineer. Before Google, I was the Chief Technology Officer (CTO) for <a href="www.mindgrasp.ai">Mindgrasp.ai</a>. I recently graduated from the University of Maryland, Baltimore County with a double Bachelor's degree in Mathematics and Computer Science in Spring 2022. 
-        My research interests include machine learning, natural language processing, high performance computing, and numerical linear algebra. 
-        In my spare time, I enjoy traveling, soccer, playing piano, running, biking, skiing, bouldering, and taking pictures. If you wish to contact me, please email me at <a href="mailto:gersonkroiz@gmail.com">gersonkroiz@gmail.com</a>.
+        Hi, I am Gerson Kroiz, and I am a ML/AI software engineer at Google.
+        I work on designing cutting-edge resiliency and optimization strategies for large scale distributed training on TPUs and GPUs.
+        Before Google, I collaborated on multiple research projects at several institutions, including <a href="https://www.ornl.gov">ORNL</a>, <a href="https://www.nist.gov">NIST</a>, <a href="https://www.ipam.ucla.edu">UCLA IPAM</a>, and <a href="https://umbc.edu">UMBC</a>.
+        I also served as CTO for <a href="https://www.mindgrasp.ai">Mindgrasp.ai</a> in 2022. 
+      </p>
+      <p class="lead">
+        My research interests include generative AI, high performance computing, and numerical linear algebra.
+        I hold double Bachelor's degrees in Mathematics and Computer Science from <a href="https://umbc.edu">UMBC</a>.
+        In my spare time, I enjoy traveling, soccer, playing piano, running, biking, skiing, bouldering, and taking pictures.
+      </p>
+      <p class="lead">
+        Feel free to reach out to <a href="mailto:gersonkroiz@gmail.com">gersonkroiz@gmail.com</a> to chat!
       
       </p>
     </div>
